Alteracao na validacao de data de agendamento
